:bug: - fix: fix a bug that caused z-index issues on selects in the DataGrid component

--- a/src/components/data/datagrid/datagrid.scss
+++ b/src/components/data/datagrid/datagrid.scss
@@ -49,7 +49,7 @@
     background-color: var(--typography-color-background);
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 20;
   }
 
   &__toolbar ~ &__scrollpane:not(&__scrollpane--overflow-y) &__thead {
